Implemented connection handling in AbstractConnector.